# Onegin

./: CMakeLists.txt  README.md  main.cpp  onegin.cpp  onegin.h  sonnet.txt
latex/: annotated.tex  files.tex  main_8cpp.tex  main_8cpp__incl.md5  refman.tex  structstring__.tex
